crates/shipper-registry/src/snapshots/shipper_registry__context__tests__empty_owner_list_detail.snap
---
source: crates/shipper/src/registry.rs
assertion_line: 4535
expression: owners
---
OwnersResponse {
    users: [],
}
