crates/shipper-registry/src/snapshots/shipper_registry__context__tests__owners_empty_users.snap
---
source: crates/shipper/src/registry.rs
assertion_line: 3953
expression: owners
---
OwnersResponse {
    users: [],
}
