crates/shipper-registry/src/snapshots/shipper_registry__context__tests__owners_response_parsed.snap
---
source: crates/shipper/src/registry.rs
expression: owners
---
OwnersResponse {
    users: [
        Owner {
            id: 42,
            login: "alice",
            name: Some(
                "Alice Wonderland",
            ),
        },
        Owner {
            id: 99,
            login: "bob",
            name: None,
        },
    ],
}
