crates/shipper-registry/src/snapshots/shipper_registry__context__tests__registry_debug_repr.snap
---
source: crates/shipper/src/registry.rs
assertion_line: 3984
expression: registry
---
Registry {
    name: "crates-io",
    api_base: "https://crates.io",
    index_base: Some(
        "https://index.crates.io",
    ),
}
